--- a/main.ipynb
+++ b/main.ipynb
@@ -54,7 +54,7 @@
       "source": [
         "from transformers import pipeline\n",
         "\n",
-        "model_id = \"llava-hf/llava-1.5-7b-hf\"\n",
+        "model_id = \"llava-hf/llava-v1.6-vicuna-13b-hf\"\n",
         "\n",
         "pipe = pipeline(\"image-to-text\", model=model_id, model_kwargs={\"quantization_config\": quantization_config})"
       ]
@@ -151,7 +151,7 @@
         "    required_length = len(df) - len(list)\n",
         "\n",
         "    extended_list = list + [None] * required_length\n",
-        "    return list\n",
+        "    return extended_list\n",
         "\n",
         "df[\"predicted_materials\"] = create(predicted_materials)\n",
         "df[\"predicted_sounds\"] = create(predicted_sounds)\n",
@@ -175,19 +175,17 @@
       "source": [
         "import re\n",
         "\n",
-        "def contains_any_word(sentence1, sentence2):\n",
-        "    if sentence2 != str(\"You should choose from the ones on the ['pumping water', 'skateboarding', 'typing on typewriter', 'waterfall burbling', 'people finger snapping', 'toilet flushing', 'fire crackling', 'driving motorcycle', 'subway, metro, underground', 'printer printing', 'vacuum cleaner cleaning floors', 'race car, auto racing', 'motorboat, speedboat acceleration', 'fireworks banging', 'eating with cutlery', 'playing snare drum', 'cap gun shooting', 'railroad car, train wagon', 'people clapping', 'splashing water', 'raining', 'horse clip-clop', 'driving buses', 'people whistling', 'train wheels squealing', 'people burping', 'machine gun shooting', 'stream burbling', 'helicopter\"):\n",
-        "            \n",
-        "        def clean_and_split(sentence):\n",
-        "            cleaned_sentence = re.sub(r'[^\\w\\s]', '', sentence.lower())\n",
-        "            return set(cleaned_sentence.split())\n",
-        "        \n",
-        "        set1 = clean_and_split(sentence1)\n",
-        "        set2 = clean_and_split(sentence2)\n",
+        "def contains_any_word(sentence1, sentence2):   \n",
+        "    def clean_and_split(sentence):\n",
+        "        cleaned_sentence = re.sub(r'[^\\w\\s]', '', sentence.lower())\n",
+        "        return set(cleaned_sentence.split())\n",
+        "    \n",
+        "    set1 = clean_and_split(sentence1)\n",
+        "    set2 = clean_and_split(sentence2)\n",
         "\n",
-        "        common_words = set1.intersection(set2)\n",
+        "    common_words = set1.intersection(set2)\n",
         "\n",
-        "        return bool(common_words)\n",
+        "    return bool(common_words)\n",
         "\n",
         "sentence1 = \"A bell ringing\"\n",
         "sentence2 = \"church bell ringing\"\n",
@@ -242,6 +240,13 @@
         "\n",
         "print(acc)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
