--- a/main.ipynb
+++ b/main.ipynb
@@ -54,7 +54,7 @@
       "source": [
         "from transformers import pipeline\n",
         "\n",
-        "model_id = \"llava-hf/llava-v1.6-vicuna-13b-hf\"\n",
+        "model_id = \"llava-hf/llava-1.5-7b-hf\"\n",
         "\n",
         "pipe = pipeline(\"image-to-text\", model=model_id, model_kwargs={\"quantization_config\": quantization_config})"
       ]
